--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -1798,9 +1798,10 @@ prj_predict <- proj_predict(prj_refmodel1)
 ppc_bars(y = data_projpred_scaled$aantal, yrep = prj_predict)
 ```
 
+We fitten het model opnieuw met de gekozen variabelen.
 
 ```{r}
-formula_final1 <- bf(paste("aantal ~", paste0(predictors_final1_refmodel1[1:5], 
+formula_final1 <- bf(paste("aantal ~", paste0(predictors_final1_refmodel1, 
                                               collapse = " + ")))
 
 final <- brm(formula = formula_final1,
@@ -1812,23 +1813,27 @@ final <- brm(formula = formula_final1,
              cores = nparallel,
              thin = thinning,
              backend = "cmdstanr")
-```
 
-We maken een simpel model met 
+final
+```
 
 ```{r}
 plot_brms_fit <- function(model, x, species = "", axis_label = "", FUN = mean,
                           factor = 1, n = 100, show_data = TRUE) {
-  if (x == "sbp") {
+  
+  cat_vars <- model$data %>%
+    select(!where(is.numeric)) %>%
+    names()
+  
+  if (x %in% cat_vars) {
     plot_df <- model$data %>%
       select(-aantal) %>%
       mutate(across(where(is.numeric), FUN)) %>%
       distinct() %>%
       add_epred_draws(model)
     
-    
     out <- plot_df %>%
-      ggplot(aes(x = paste(.data[[x]], x), y = aantal, fill = .data[[x]]))
+      ggplot(aes(x = .data[[x]], y = aantal, fill = .data[[x]]))
     
     if (isTRUE(show_data)) {
       out <- out +
@@ -1844,13 +1849,23 @@ plot_brms_fit <- function(model, x, species = "", axis_label = "", FUN = mean,
       labs(x = axis_label,
            y = paste("aantal broedparen", species)) +
       theme(legend.position = "")
+    
+    if (length(cat_vars)  == 2) {
+      facet_var <- setdiff(cat_vars, x)
+      out <- out +
+        facet_wrap(vars(!!sym(facet_var)))
+    } else if (length(cat_vars) > 2) {
+      stop("Not implemented for more than 3 categorical predictors!", .call = FALSE)
+    }
+      
   } else {
     plot_df <- model$data %>%
       select_at(vars(-"aantal", -x)) %>%
       mutate(across(where(is.numeric), ~FUN(.x))) %>%
       distinct() %>%
       expand_grid(range = seq_range(model$data[[x]], n = n)) %>%
-      `colnames<-`(c(names(model$data)[-match(c("aantal", x), names(model$data))], x)) %>%
+      `colnames<-`(c(names(model$data)[-match(c("aantal", x), 
+                                              names(model$data))], x)) %>%
       add_epred_draws(model)
     
     out <- plot_df %>%
@@ -1869,75 +1884,81 @@ plot_brms_fit <- function(model, x, species = "", axis_label = "", FUN = mean,
       labs(x = axis_label,
            y = paste("aantal broedparen", species),
            fill = "credible\nlevel")
+    
+    if (length(cat_vars) == 1) {
+      out <- out +
+        facet_wrap(vars(!!sym(cat_vars)))
+    } else if (length(cat_vars) == 2) {
+      out <- out +
+        facet_grid(vars(!!sym(cat_vars[1])), vars(!!sym(cat_vars[2])))
+    } else if (length(cat_vars) > 2) {
+      stop("Not implemented for more than 2 categorical predictors!", .call = FALSE)
+    }
   }
   return(out)
 }
 ```
 
 ```{r}
-plot_brms_fit(final, x = "sbp", show_data = FALSE)
+plot_brms_fit(final, x = "sbp", show_data = FALSE,
+              axis_label = "soortbeschermingsplan")
+
+plot_brms_fit(final, x = "status_teller", show_data = FALSE,
+              axis_label = "teller status")
 ```
 
 ```{r}
-p1 <- plot_brms_fit(final, x = "haag", factor = 100, show_data = FALSE,
-                    axis_label = "proportie hagen (%)") +
-  theme(axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 1.6))
-p2 <- plot_brms_fit(final, x = "houtkant", factor = 100, show_data = FALSE,
-                    axis_label = "proportie houtkanten (%)") +
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.y = element_blank(),
-        axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 1.6))
-p3 <- plot_brms_fit(final, x = "wintergranen_hfdtlt", factor = 100, 
-                    show_data = FALSE,
-                    axis_label = "proportie hoofdteelt wintergranen (%)") +
-  theme(axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 1.6))
-p4 <- plot_brms_fit(final, x = "openheid_waarde_1000", show_data = FALSE,
-                    axis_label = "openheid landschap (1000 m)") + 
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.y = element_blank(),
-        axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 1.6))
-
-ggarrange(p1, p2, p3, p4, common.legend = TRUE, legend = "right")
+plot_brms_fit(final, x = "houtkant", factor = 100, show_data = FALSE,
+              axis_label = "proportie houtkanten (%)")
+plot_brms_fit(final, x = "haag", factor = 100, show_data = FALSE,
+              axis_label = "proportie hagen (%)")
+plot_brms_fit(final, x = "wintergranen_hfdtlt", factor = 100, 
+              show_data = FALSE,
+              axis_label = "proportie hoofdteelt wintergranen (%)")
+plot_brms_fit(final, x = "openheid_waarde_1000", show_data = FALSE,
+              axis_label = "openheid landschap (1000 m)")
+plot_brms_fit(final, x = "groententeelt_hfdtlt", factor = 100, show_data = FALSE,
+                    axis_label = "proportie hoofdteelt groententeelt (%)")
+plot_brms_fit(final, x = "zomergranen_hfdtlt2", factor = 100, show_data = FALSE,
+              axis_label = "proportie hoofdteelt zomergranen (%)")
+plot_brms_fit(final, x = "boom", factor = 100, 
+              show_data = FALSE,
+              axis_label = "proportie bomen (%)")
+plot_brms_fit(final, x = "aardappelen_hfdtlt", show_data = FALSE,
+              axis_label = "proportie hoofdteelt aardappelen (%)")
 ```
 
 ```{r}
-p5 <- plot_brms_fit(final, x = "haag", factor = 100,
-                    axis_label = "proportie hagen (%)") +
-  theme(axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 6))
-p6 <- plot_brms_fit(final, x = "houtkant", factor = 100,
-                    axis_label = "proportie houtkanten (%)") +
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.y = element_blank(),
-        axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 6))
-p7 <- plot_brms_fit(final, x = "wintergranen_hfdtlt", factor = 100,
-                    axis_label = "proportie hoofdteelt wintergranen (%)") +
-  theme(axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 6))
-p8 <- plot_brms_fit(final, x = "openheid_waarde_1000", 
-                    axis_label = "openheid landschap (1000 m)") +
-  theme(axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.y = element_blank(),
-        axis.title = element_text(size = 12)) +
-  coord_cartesian(ylim = c(0, 6))
-ggarrange(p5, p6, p7, p8, common.legend = TRUE, legend = "right")
+plot_brms_fit(final, x = "houtkant", factor = 100, show_data = TRUE,
+              axis_label = "proportie houtkanten (%)")
+plot_brms_fit(final, x = "haag", factor = 100, show_data = TRUE,
+              axis_label = "proportie hagen (%)")
+plot_brms_fit(final, x = "wintergranen_hfdtlt", factor = 100, 
+              show_data = TRUE,
+              axis_label = "proportie hoofdteelt wintergranen (%)")
+plot_brms_fit(final, x = "openheid_waarde_1000", show_data = TRUE,
+              axis_label = "openheid landschap (1000 m)")
+plot_brms_fit(final, x = "groententeelt_hfdtlt", factor = 100, show_data = TRUE,
+                    axis_label = "proportie hoofdteelt groententeelt (%)")
+plot_brms_fit(final, x = "zomergranen_hfdtlt2", factor = 100, show_data = TRUE,
+              axis_label = "proportie hoofdteelt zomergranen (%)")
+plot_brms_fit(final, x = "boom", factor = 100, 
+              show_data = TRUE,
+              axis_label = "proportie bomen (%)")
+plot_brms_fit(final, x = "aardappelen_hfdtlt", show_data = TRUE,
+              axis_label = "proportie hoofdteelt aardappelen (%)")
 ```
 
 
-Conclusie:
-- geef dataframe door aan functie wegens onzekerheid welke variabelen
-- projpred met sbp, met area_prop_sb_cat en met alles (algemeen effect)
-  - voor OL en DM
-  - voor bepaalde soorten
+## Conclusie
+
+-  PPVS lijkt een goede methode voor selectie van variabelen
+-  We voeren dit uit voor sbp, met area_prop_sb_cat en met alle variabelen (geen restricties)
+  -  voor OL en DM apart
+  -  voor specifieke doelsoorten apart
+  -  enkel voor 2022 of ook al 2023?
+  -  alle variabelen voor alle jaren, maar enkel gemeenschappelijke plots?
+
 
 # Oostelijke leemstreek 2022: sbp
 
