--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -684,13 +684,18 @@ Zowel per design als via k-fold validation lijkt het random intercept onze voork
 ### Data preparatie
 
 We nemen per telpunt per jaar het maximum aantal broedvogels over de telperiodes heen.
-Enkel de variabele `n_predators` is afhankelijk per telperiode.
+De variabele `n_predators` is afhankelijk per telperiode.
 Hiervan nemen we het gemiddelde.
+De variabele `status_teller` kan ook afhankelijk zijn per telperiode.
+We kiezen de meest frequente status per telpunt per jaar.
 
 ```{r}
 gele_kwik_df_mod2 <- gele_kwik_df %>%
   select(all_of(c(response_vars, strat_vars, pred_vars))) %>%
-  group_by(group_by(across(c(-periode_in_jaar, -aantal, -n_predators)))) %>%
+  group_by(plotnaam, jaar) %>%
+  mutate(status_teller = names(which.max(table(status_teller)))) %>%
+  ungroup() %>%
+  group_by(across(c(-periode_in_jaar, -aantal, -n_predators))) %>%
   summarise(aantal = max(aantal),
             n_predators2 = mean(n_predators),
             .groups = "drop") %>%
@@ -2028,7 +2033,10 @@ create_data_list <- function(doel_soorten, region, year = 2022) {
     # Aggregate counts by plot and year
     mas_data_df_agg <- mas_data_df_full %>%
       select(all_of(c(response_vars, strat_vars, pred_vars))) %>%
-      group_by(group_by(across(c(-periode_in_jaar, -aantal, -n_predators)))) %>%
+      group_by(plotnaam, jaar) %>%
+      mutate(status_teller = names(which.max(table(status_teller)))) %>%
+      ungroup() %>%
+      group_by(across(c(-periode_in_jaar, -aantal, -n_predators))) %>%
       summarise(aantal = max(aantal),
                 n_predators2 = mean(n_predators),
                 .groups = "drop") %>%
@@ -2629,37 +2637,33 @@ for (i in seq_along(cvvs_olpropsb_list)) {
 Voor de totaalanalyse beschouwen we alle plots van 2018-2021 en voegen enkel plots van 2022 toe als ze minstens eenmaal geteld zijn in een van de voorgaande jaren (cf. distance sampling analyses). `jaar` zal een extra variabele zijn (als factor). We voeren de PPVS uit zonder restricties.
 
 ```{r}
-# Get presence absences for region and year span
+# Get presence-absences for region and year span
 df_count_list_oltotal_raw <- create_data_list(
   doel_soorten, 
   "Oostelijke leemstreek", 
   2018:2022)
 
-plots_old <- bezoekenlijst_2018_2022 %>%
-  filter(jaar != 2022) %>%
+# Get plots from 2018-2021
+plots_old <- design %>%
+  filter(regio == "Oostelijke leemstreek",
+         jaar != 2022) %>%
   distinct(plotnaam) %>%
   pull()
 
-df_count_list_oltotal_raw$Geelgors %>% 
-  distinct(jaar, plotnaam) %>%
-  nrow()
-
-df_count_list_oltotal_raw$GeleKwikstaart %>%
-  count(jaar, plotnaam) %>%
-  arrange(desc(n), plotnaam)
-
-df_count_list_oltotal_raw$Geelgors %>% View()
-
-design %>%
-  filter(regio == "Oostelijke leemstreek") %>%
-  distinct(jaar, plotnaam)
-
-veldleeuwerik_2018_2022_reduced <- veldleeuwerik_presences %>%
-  filter(plotnaam %in% plots_old)
-
-df_count_list_oltotal <- 
+# Retrieve presence-absence data only from old plots
+df_count_list_oltotal <- lapply(df_count_list_oltotal_raw, function(df) {
+  df %>%
+    filter(plotnaam %in% plots_old)
+  })
 ```
 
+Het gaat om zoveel plots (en dus datapunten) per jaar:
+
+```{r}
+df_count_list_oltotal$Geelgors %>%
+  group_by(jaar) %>% summarise(n = n_distinct(plotnaam)) %>%
+  kable()
+```
 
 > testcase Veldleeuwerik
 
